--- a/estilo.css
+++ b/estilo.css
@@ -80,7 +80,22 @@ h1:after{
     background: -webkit-linear-gradient(left, rgba(182, 110, 182, 0) 0%,rgba(124, 39, 110, 0.8) 20%,rgb(240, 120, 220) 53%,rgba(206, 99, 197, 0.8) 79%,rgba(228, 102, 217, 0) 100%); 
     background: linear-gradient(left, rgba(231, 96, 213, 0) 0%,rgba(208, 86, 219, 0.8) 20%,rgb(182, 47, 171) 53%,rgba(147,184,189,0.8) 79%,rgba(147,184,189,0) 100%); 
   }
-
+input[type="submit"]{
+    width: 100%!important;
+    cursor: pointer;  
+    background:  #9932CC;
+    padding: 8px 5px;
+    color: #fff;
+    font-size: 20px;  
+    border: 1px solid #fff;   
+    margin-bottom: 10px;  
+    text-shadow: 0 1px 1px #333;
+   
+    -webkit-border-radius: 5px;
+    border-radius: 5px;
+   
+    transition: all 0.2s linear;
+  }
 #corpo-form-cad h1{
     text-align: center;
     padding: 20px;
